Update горячие клавиши на дебиан.md

--- a/горячие клавиши на дебиан.md
+++ b/горячие клавиши на дебиан.md
@@ -1,1 +1,31 @@
+горячие клавиши на дебиан:
+
+**`Alt+Shift+T`**:-Окрыть новую вкладку терминала
+
+**`Ctrl+Shift+W`**:: Закрыть текущую вкладку или окно терминала
+
+**`Ctrl+Shift+w`**:-открыть новый терминал
+
+**`Сtrl+C`**:-копировать текст
+
+**`Ctrl+Shift+V`**-вставить текст
+
+**`Alt+(номер вкладки)`**: Перейти на указанную вкладку 
+
+**`Ctrl+Z`**: Перевести текущую команду в фоновый режим.
+
+**`Ctrl+K`**: Удалить весь текст справа от курсора
+
+**`Ctrl+W`**: Удалить одно слово слева от курсора 
+
+**`Ctrl + Alt + Del`**-войти в сонный режим
+
+**`Alt + F2`**-поиск
+
+**`Ctrl + Shift + Q`**-закрытия окон терминала
+
+**`Alt + Backspace.`** Команда, которая удаляет слово, стоящее перед курсором.
+
+**`Ctrl + O.`** Данное сочетание выполнит команду, найденную с помощью вышеописанной комбинации.
+
 
